--- a/InClass01/Index.html
+++ b/InClass01/Index.html
@@ -4,6 +4,6 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <h1>Hello Alvin</h1>
+        <h1>Hi Alvin</h1>
     </body>
 </html>
