Lab 1 Initial Commit

--- a/InClass01/Index.html
+++ b/InClass01/Index.html
@@ -1,10 +1,9 @@
 <html>
     <head>
-        <title>Name</title>
+        <title>Lesson 1 Hello Classmate</title>
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        
         <h1>Hi Alvin</h1>
     </body>
 </html>
