Updating In Class Examples (J Leasure)

--- a/InClassExamples/InClass04/Group2-Events.html
+++ b/InClassExamples/InClass04/Group2-Events.html
@@ -17,23 +17,12 @@
 <html>
 <head>
     <style>
-    body { font-size: 10px; }
+    body { font-size: 30px; }
     </style>
 </head>
 <body>
 
-<p id="font" onclick="myFunction()" ondblclick="myFunctionMedium()">Click the button to display the date.</p>
+<p>Click the button to display the date.</p>
 
-<script>
-    function myFunction() {
-        document.getElementById("font").style.fontSize = "x-large";
-    }
-    </script>
-
-<script>
-    function myFunctionMedium() {
-        document.getElementById("font").style.fontSize = "medium";
-    }
-    </script>
 </body>
 </html> 
