--- a/Lab4/Lab4.html
+++ b/Lab4/Lab4.html
@@ -2,37 +2,48 @@
 <title>IT2320 - Lab 3</title>
 <!-- 1. Add jQuery using a CDN 
         https://www.w3schools.com/jquery/jquery_get_started.asp
+        Finished
 -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script>
     var items = [];
     var costs = [];
 
     // 2. Change all calls to document.getElementById to the jQuery $ method
+    //?
+
+    $(document).ready(function(){
+        // jQuery methods go here...
+    });
 
     // 3. Replace the window.onload event with jQuery document(ready)
     //    https://www.w3schools.com/jquery/jquery_syntax.asp
-    window.onload = function() {
-        document.getElementById('newItem').focus();
-    }
+    // Finished
+    $(document).ready(function(){
+        $('newItem').focus();
+    });
 
     function openTab(tabName) {
         var i;
         // 4. Change getElementsByClassName to the jQuery $ method
-        var x = document.getElementsByClassName("tab");
+        //Finished
+        var x = $("tab");
         for (i = 0; i < x.length; i++) {
             // 5. Change the following line style.display = "none" to hide()
             //    https://www.w3schools.com/jquery/jquery_hide_show.asp
-           x[i].style.display = "none";  
+            //Finished?
+           x[i].$("p").hide();  
         }
 
         // 6. Change the following line style.display = "block" to show()
-        https://www.w3schools.com/jquery/jquery_hide_show.asp
-        document.getElementById(tabName).style.display = "block";  
+        // https://www.w3schools.com/jquery/jquery_hide_show.asp
+        // Finished?
+        $("p").show(); 
     }
 
     function addItem() {
-        var newItem = document.getElementById('newItem').value;
-        var newAmount = parseFloat(document.getElementById('newAmount').value);
+        var newItem = $('newItem').value;
+        var newAmount = parseFloat($('newAmount').value);
         costs.push(newAmount);
         items.push(newItem);
 
@@ -53,12 +64,27 @@
         //    https://www.w3schools.com/jquery/jquery_dom_get.asp
         //    https://www.w3schools.com/jquery/jquery_dom_set.asp
         //    Example: $('#summary').html(itemsSummary);
-        document.getElementById('summary').innerHTML = itemsSummary;
-        document.getElementById('currentItems').innerHTML = itemsDisplay;
+        // Finished?
+        $(document).ready(function(){
+            $('summary').html(itemsSummary);
+            $('summary').html("");
+        });
+        $(document).ready(function(){
+            $('currentItems').html(itemsDisplay);
+            $('currentItems').html("");
+        });
+
         // 8. Change all .value properties to jQuery .val() get and set
-        document.getElementById('newItem').value = '';
-        document.getElementById('newAmount').value = '';
-        document.getElementById('newItem').focus();
+        //?
+        $(document).ready(function(){
+            $('newItem').val('');
+            $('newItem').val("");
+        });
+        $(document).ready(function(){
+            $('newAmount').val('');
+            $('newAmount').val("");
+        });
+        $('newItem').focus();
     }
 
     </script>
