--- a/Lab4/Lab4.html
+++ b/Lab4/Lab4.html
@@ -2,7 +2,6 @@
 <title>IT2320 - Lab 3</title>
 <!-- 1. Add jQuery using a CDN 
         https://www.w3schools.com/jquery/jquery_get_started.asp
-        Finished
 -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script>
@@ -10,15 +9,9 @@
     var costs = [];
 
     // 2. Change all calls to document.getElementById to the jQuery $ method
-    //?
-
-    $(document).ready(function(){
-        // jQuery methods go here...
-    });
 
     // 3. Replace the window.onload event with jQuery document(ready)
     //    https://www.w3schools.com/jquery/jquery_syntax.asp
-    // Finished
     $(document).ready(function(){
         $('newItem').focus();
     });
@@ -31,14 +24,16 @@
         for (i = 0; i < x.length; i++) {
             // 5. Change the following line style.display = "none" to hide()
             //    https://www.w3schools.com/jquery/jquery_hide_show.asp
-            //Finished?
-           x[i].$("p").hide();  
+        $("#hide").click(function(){
+            x[i].$("p").hide();
+        });
         }
 
         // 6. Change the following line style.display = "block" to show()
         // https://www.w3schools.com/jquery/jquery_hide_show.asp
-        // Finished?
-        $("p").show(); 
+        $("#show").click(function(){
+            $("p").show();
+    }); 
     }
 
     function addItem() {
@@ -64,26 +59,27 @@
         //    https://www.w3schools.com/jquery/jquery_dom_get.asp
         //    https://www.w3schools.com/jquery/jquery_dom_set.asp
         //    Example: $('#summary').html(itemsSummary);
-        // Finished?
         $(document).ready(function(){
+            alert("Text: " + $("#summary").text());
             $('summary').html(itemsSummary);
-            $('summary').html("");
         });
+
         $(document).ready(function(){
+            alert("Text: " + $("#currentItems").text());
             $('currentItems').html(itemsDisplay);
-            $('currentItems').html("");
         });
 
         // 8. Change all .value properties to jQuery .val() get and set
-        //?
         $(document).ready(function(){
-            $('newItem').val('');
-            $('newItem').val("");
+            alert("Value: " + $("#newItem").val());
+            $('newItem').val();
         });
+
         $(document).ready(function(){
-            $('newAmount').val('');
-            $('newAmount').val("");
+            alert("Value: " + $("#newAmount").val());
+            $('newAmount').val();
         });
+
         $('newItem').focus();
     }
 
