Lab 5 Intitial Commit

--- a/Lab5.html
+++ b/Lab5.html
@@ -3,7 +3,7 @@
 <head>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script>
-// 1. use eq-(it reterives a spefific index) to retrieve the paragraph with index 1. Highlight it by setting the CSS background-color to yellow.
+// 1. use eq to retrieve the paragraph with index 1. Highlight it by setting the CSS background-color to yellow.
     $(document).ready(function(){
         $("p").eq(1).css("background-color", "yellow");
     });
